like/dislike functionality is done + issue is that it's applying like/dislike status to each visible post

--- a/src/Components/DisplayPosts/DisplayPosts.css
+++ b/src/Components/DisplayPosts/DisplayPosts.css
@@ -54,10 +54,14 @@
   width: 25px;
 }
 
-.liked {
+.liked-status {
   background-color: green;
 }
 
-.disliked {
+.disliked-status {
   background-color: red;
+}
+
+.neutral-status {
+  background-color: white;
 }
